# Cursach-BSUIR-sem3

./: GlistanulCBT.txt
CmakeCBT/: CMakeLists.txt  accountstable.cpp  adminwindow.cpp  adminwindow.h  adminwindow.ui  dbcontroller.cpp  dbcontroller.h  displaywidgets.cpp  displaywidgets.h  errors.cpp  errors.h  main.cpp  model.cpp  model.h  mytable.cpp  mytable.h  startwindow.cpp  startwindow.h  startwindow.ui  studentwindow.cpp  studentwindow.h  studentwindow.ui  teacherwindow.ui  tst_dbcontrollertests.cpp  tst_dbctests.cpp
CmakeCBT/debug/lib/: bson-1.0.lib  mongocxx.lib
CmakeCBT/debug/lib/pkgconfig/: libbson-1.0.pc  libbsoncxx.pc  libmongoc-1.0.pc  libmongoc-ssl-1.0.pc  libmongocxx.pc
CmakeCBT/include/mongoc/: mongoc-config.h
CmakeCBT/lib/: bsoncxx.lib  mongoc-1.0.lib
CmakeCBT/lib/pkgconfig/: libbsoncxx.pc  libmongocxx.pc
CmakeCBT/share/bson-1.0/: bson-targets.cmake
CmakeCBT/share/bsoncxx/: bsoncxx_targets-debug.cmake  bsoncxx_targets.cmake
CmakeCBT/share/libbson/: vcpkg.spdx.json  vcpkg_abi_info.txt
CmakeCBT/share/libbson-1.0/: libbson-1.0-config-version.cmake  libbson-1.0-config.cmake
CmakeCBT/share/libbsoncxx/: libbsoncxx-config.cmake
CmakeCBT/share/libmongoc-1.0/: libmongoc-1.0-config.cmake
CmakeCBT/share/libmongocxx/: libmongocxx-config.cmake
CmakeCBT/share/mongo-c-driver/: vcpkg.spdx.json  vcpkg_abi_info.txt
CmakeCBT/share/mongo-cxx-driver/: vcpkg.spdx.json  vcpkg_abi_info.txt
CmakeCBT/share/mongoc-1.0/: mongoc-1.0-config-version.cmake  mongoc-1.0-config.cmake  mongoc-targets.cmake
CmakeCBT/share/mongocxx/: mongocxx_targets-debug.cmake  mongocxx_targets.cmake
CmakeCBT/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
CmakeCBT/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
CmakeCBT/share/zlib/: vcpkg.spdx.json  vcpkg_abi_info.txt
CmakeCBT/tests/: CMakeLists.txt  tst_test1.cpp
Zapiska/: A.vsd  CBTreport.docm  GlistanulCBT.docx  Б.vsdx  В.vsdx  спецификация.vsdx
